--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Chatbot</title>
   <link rel="stylesheet" href="css/style.css">
 
-  
+
 </head>
 
 <body>
@@ -24,7 +24,7 @@
       </div>
     </div>
   </form>
-  <script src="js/main.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
